feat(build): memory-aware child-JVM heap sizing and concurrency cap
Size forked worker JVMs (compilers, test runner) to the host's actual free
memory instead of a flat MaxRAMPercentage:

- MemoryProbe reads container-aware total/available memory — cgroup v2/v1 +
  /proc/meminfo MemAvailable on Linux, com.sun OS-bean fallback elsewhere.
- HeapPlan turns (available, desired JVM count) into a per-JVM budget: reserve
  max(10%, 96 MiB); shrink parallelism while a share is < 512 MiB; serial best
  effort with a warning under 512 MiB; otherwise -Xmx = usable/count (burst),
  SoftMaxHeapSize = clamp(50%, 512 MiB, perJvm) good-neighbour target, small
  -Xms (generational ZGC + ZUncommit returns idle heap).
- WorkerSlots caps how many worker JVMs run at once; every fork leases a slot
  in WorkerProcess, so per-JVM heap × live JVMs stays within usable memory.
- BuildCommand/TestCommand compute the desired count from the build DAG's peak
  width folded with --workers / --parallel-tests, then apply the plan; explicit
  --max-ram-percent / [jvm] / heap --jvm-arg disable auto-sizing.

The native CLI also pins its own initial heap (-R:MinHeapSize=256 MiB) to match
its 256 MiB cap. Also carries the build-side wiring of the completed-tail view:
buildUnitLive routes completion lines into the live tail and defers worker
output to a buffer flushed below the region once the build settles.